--- a/journal/201907.md
+++ b/journal/201907.md
@@ -8,32 +8,32 @@ _الصورة: مناقشة التحصيص في مؤتمر StakingCon 2019 في 
 
 أهم أخبار شهر يوليوز:
 
-* تم إصدار مسودة [مواصفات](https://github.com/decred/dcrdex) منصة التبادل اللامركزي، ويشكل ذلك مرحلة هامة صوب إنجازها. تم تقديم [مقترح](https://proposals.decred.org/proposals/417607aaedff2942ff3701cdb4eff76637eca4ed7f7ba816e5c0bd2e971602e1) يهم إجراء أعمال التطوير في أوائل شهر غشت من قِبل مطوري dcrdata، وسيتم تغطيته في إصدار غشت.
+* تم إصدار مسودة [مواصفات](https://github.com/decred/dcrdex) منصة التبادل اللامركزي، ويشكل ذلك مرحلة هامة صوب إنجازها. تم تقديم [مقترح](https://proposals.decred.org/proposals/417607aaedff2942ff3701cdb4eff76637eca4ed7f7ba816e5c0bd2e971602e1)  لإجراء أعمال التطوير في أوائل شهر غشت من قِبل مطوري dcrdata، وسيتم تغطيته في إصدار غشت.
 * تم نشر 3 مقترحات من الشركات التي تقدم خدمات صنع السوق في 7 غشت، وتم نشر اقتراح آخر لتقديم العروض في 10 غشت يطلب من أصحاب الحصص الإشارة أولاً إلى ما إذا كانوا يرغبون في استئجار صانع سوق. سيتم تغطيتها في ملخص بوليتيا دايجست (قريبًا) وفي مجلة الشهر المقبل.
-* تم إصدار مجموعة أدوات بايتون TinyDecred بواسطة buck54321@، وهو متعاقد كان يعمل على بيانات dcrdata السنة الماضية. في البداية، كانت TinyDecred عبارة عن مشروع شخصي لبرايان، ولكن مع مرور الوقت تطورت إلى مجموعة مفيدة من الأدوات [التي](https://proposals.decred.org/proposals/20e967dad9e7398901decf3cfe0acf4e0853f6558a62607265c63fe791b8b124) يمكن أن تفتح باب التطوير ذو صلة بديكريد مع عدد كبير من مبرمجي البايتون. وقد تم تقديم مقترح يطلب مبلغًا قدره 8،000 دولار للعمل الذي تم تنفيذه حتى الآن في  TinyDecred - ويبدو أنه يحظى بدعم قوي.
+* تم إصدار مجموعة أدوات بايثون TinyDecred بواسطة buck54321@، وهو متعاقد كان يعمل على بيانات dcrdata السنة الماضية. في البداية، كانت TinyDecred عبارة عن مشروع شخصي لبرايان، ولكن مع مرور الوقت تطورت إلى مجموعة مفيدة من الأدوات [التي](https://proposals.decred.org/proposals/20e967dad9e7398901decf3cfe0acf4e0853f6558a62607265c63fe791b8b124) يمكن أن تفتح باب التطوير ذو صلة بديكريد مع عدد كبير من مبرمجي البايثون. وقد تم تقديم مقترح يطلب مبلغًا قدره 8،000 دولار للعمل الذي تم تنفيذه حتى الآن في  TinyDecred - ويبدو أنه يحظى بدعم قوي.
 * تم إصدار النسخة التجريبية ل dcrdata، معبأة بالكامل بالتحسينات الإضافية. كما كان هناك تقدم جيد في dcrextdata، مع جمع المزيد من بيانات السوق ونشر العقد على الشبكة لجمع البيانات عن الميمبول وأوقات نشر الكتلة.
 * تم إصدار بعض البودكاستات الرائعة لديكريد في العمق مع [muststopmurad@](https://www.youtube.com/watch?v=XkvcdjSH0c0) و [permabullnino@](https://www.youtube.com/watch?v=HxECplK3kAs) يتحدثان عن السبب وراء مشاركتهما في ديكريد وعن الفرص والتحديات التي يرونها للمضي قدمًا في المشروع.
-* يبدو أن المناقشات المتعلقة بالديكريد تتزايد على وسائل التواصل الاجتماعي، كما تتوسع دائرة الأشخاص المشاركين في هذه المناقشات. ومما لا شك فيه أن هذا راجع إلى هاشتاغ تحدي ديكريد DecredChallenge# والميمات المرتبطة به، والتي بدأها وأشاعها Checkmate@ - والذي قام أيضا بنشر [مقالًا](https://medium.com/@_Checkmatey_/monetary-premiums-can-altcoins-compete-with-bitcoin-54c97a92c6d4) عن القسط النقدي الخاص بالديكريد، وقدم [اقتراحًا](https://proposals.decred.org/proposals/78b50f218106f5de40f9bd7f604b048da168f2afbec32c8662722b70d62e4d36) لمواصلة هذا الخط من البحث (تمت الموافقة عليه الآن). تم الاستشهاد بمقالة Checkmate@ بالفعل من طرف Blockhead Capital في [أطروحة استثمار](https://www.blockheadcap.com/post/decred-investment-thesis) - والتي كان لديها أيضا بعض الأشياء اللطيفة الأخرى لقولها عن DCR.
+* يبدو أن المناقشات المتعلقة بالديكريد تتزايد على وسائل التواصل الاجتماعي، كما تتوسع دائرة الأشخاص المشاركين في هذه المناقشات. ومما لا شك فيه أن هذا راجع إلى هاشتاغ تحدي ديكريد DecredChallenge# والميمات المرتبطة به، والتي بدأها وأشاعها Checkmate@ - والذي قام أيضا بنشر [مقالًا](https://medium.com/@_Checkmatey_/monetary-premiums-can-altcoins-compete-with-bitcoin-54c97a92c6d4) عن العلاوة النقدي الخاص بالديكريد، وقدم [اقتراحًا](https://proposals.decred.org/proposals/78b50f218106f5de40f9bd7f604b048da168f2afbec32c8662722b70d62e4d36) لمواصلة هذا المجال من البحث (تمت الموافقة عليه الآن). تم الاستشهاد بمقالة Checkmate@ بالفعل من طرف Blockhead Capital في [أطروحة استثمار](https://www.blockheadcap.com/post/decred-investment-thesis) - والتي كان لديها أيضا بعض الأشياء الإيجابية الأخرى لقولها عن DCR.
 
 ## التطوير
 
 [dcrd](https://github.com/decred/dcrd): تحسينات وإضافات البنية التحتية للعديد من الميزات القادمة المخطط لها، مع صيانة الكود، وإصلاح الأخطاء.
 
-تم تقديم إصدارات رئيسية جديدة من وحدات [rpcclient](https://github.com/decred/dcrd/pull/1807) و[قواعد البيانات](https://github.com/decred/dcrd/pull/1799) و [البلوكشين/التحصيص](https://github.com/decred/dcrd/pull/1803) و [dcrjson](https://github.com/decred/dcrd/pull/1779) للاستفادة من التحسينات الحديثة في الوحدات الأخرى. كما شهدت وحدة dcrjson الجديدة إصلاحًا كبيرًا، مع الاحتفاظ بواجهة برمجة تطبيقات متوافقة مع الإصدارات السابقة. سيتيح هذا للوحدات النمطية للمستهلك التقاط أغلبية التحسينات قبل التحديث الكامل إلى واجهة برمجة التطبيقات الجديدة. أخذت إمكانية المطبات الرئيسية للنسخة لكسر الاقتران الضيق وإزالة الكود غير المستخدم.
+تم تقديم إصدارات رئيسية جديدة من وحدات [rpcclient](https://github.com/decred/dcrd/pull/1807) و[قواعد البيانات](https://github.com/decred/dcrd/pull/1799) و [البلوكشين/التحصيص](https://github.com/decred/dcrd/pull/1803) و [dcrjson](https://github.com/decred/dcrd/pull/1779) للاستفادة من التحسينات الحديثة في الوحدات الأخرى. كما شهدت وحدة dcrjson الجديدة إصلاحًا كبيرًا، مع الاحتفاظ بواجهة برمجة تطبيقات متوافقة مع الإصدارات السابقة. سيتيح هذا لمستهلك الوحدات النمطية بالتقاط أغلبية التحسينات قبل التحديث الكامل إلى واجهة برمجة التطبيقات الجديدة. أخذت فرصة لإصدار نسخة رئيسية لكسر الاقتران الضيق وإزالة الكود غير المستخدم.
 
 أضيف [حل بديل](https://github.com/decred/dcrd/pull/1801)  لمشكلات إنشاء برنامج التحويل البرمجي ل GO لتجنب انفجار الحجم الثنائي لوحدة chaincfg/الإصدار 2.
 
 [dcrwallet](https://github.com/decred/dcrwallet): تحديث قاعدة البيانات و تصليح الأخطاء. مع دمج [إعادة تحليل](https://github.com/decred/dcrwallet/pull/1509) كبيرة لكود JSON-RPC و[إزالة](https://github.com/decred/dcrwallet/pull/1496) كود gRPC القديم.
 
-[ديكريديتون](https://github.com/decred/decrediton): تحسينات واجهة المستخدم الثانوية وإصلاح الأخطاء. مع [تنفيذ](https://github.com/decred/decrediton/pull/2146) عرض تذكرة الشراء المتجاوب. و [تحديث](https://github.com/decred/decrediton/pull/2156) طن من التبعيات لإغلاق مجموعة من الثغرات الأمنية.
+[ديكريديتون](https://github.com/decred/decrediton): تحسينات بسيطة لواجهة المستخدم وإصلاح الأخطاء. مع [تنفيذ](https://github.com/decred/decrediton/pull/2146) عرض تذكرة الشراء المتجاوب. و [تحديث](https://github.com/decred/decrediton/pull/2156) طن من التبعيات لإغلاق مجموعة من الثغرات الأمنية.
 
 [بوليتيا](https://github.com/decred/politeia): يستمر العمل على [إعادة تصميم](https://github.com/decred/dcrdesign/issues/77) واجهة بوليتيا. أما المهمة الرئيسية الأخرى في يوليوز فتتعلق [بإدماج](https://github.com/decred/politeia/pull/951) tlog من بيانات [Trillian](https://github.com/google/trillian) المفتوحة المصدر لجوجل إلى الواجهة الخلفية كبديل لـGit. سيعمل tlog ([سجل شفاف](https://research.swtch.com/tlog)) على تحسين قابلية التوسع، مع السماح للسجلات بأن تكون ذات طابع زمني فردي، وسيسمح بالتبديل إلى نظام ملفات مثل "[أي بي إف إس](https://ipfs.io)" في المستقبل.
 
-تم [استبدال](https://github.com/decred/politeia/pull/940) خاصية الولوج بواسطة البريد الإلكتروني بإستخدام اسم المستخدم كجزء من الجهد المبذول لجعل [البريد الإلكتروني اختياري](https://github.com/decred/politeia/issues/554)، وسيتم نشرها على بوليتيا خلال التحديث التالي.
+تم [استبدال](https://github.com/decred/politeia/pull/940) خاصية الدخول بواسطة البريد الإلكتروني بإستخدام اسم المستخدم كجزء من الجهد المبذول لجعل [البريد الإلكتروني اختياري](https://github.com/decred/politeia/issues/554)، وسيتم نشرها على بوليتيا خلال التحديث التالي.
 
 [dcrstakepool](https://github.com/decred/dcrstakepool): تحسينات واجهة المستخدم وتحسينات الأداء. كما تمت إعادة صياغة "عرض [إتصل بالمحفظة](https://github.com/decred/dcrstakepool/pull/427)" وإضافة عرض [ارتفاع كتلة](https://github.com/decred/dcrstakepool/pull/440) موفر خدمة التصويت VSP كمؤشر صحي. مع المزيد من العمل [لفصل](https://github.com/decred/dcrstakepool/issues/227) dcrstakepool و dcrwallet (يجب على dcrstakepool التحدث فقط إلى خدمة stakepoold التي تدير بدورها محفظة التصويت).
 
-بدأت مجموعة Raedah العمل على [تحسين](https://github.com/raedahgroup/dcrstakepool/pull/4) واجهات برمجة التطبيقات لمصادقة موفر خدمة التصويت VSP. سيؤدي ذلك إلى تمكين استخدام [موفر خدمة التصويت بدون محاسبة](https://github.com/decredcommunity/issues/issues/100)، و التي ستبسط عملية الإعداد بشكل كبير للمستخدمين الجدد والسماح بجعل [البريد الإلكتروني اختياريًا](https://github.com/decred/dcrstakepool/issues/274) ([مناقشة](https://matrix.to/#/!wSdymYrEpBhsWlDJuk:decred.org/$15605505894685ViDcj:decred.org)).
+بدأت مجموعة Raedah العمل على [تحسين](https://github.com/raedahgroup/dcrstakepool/pull/4) واجهات برمجة التطبيقات لمصادقة موفر خدمة التصويت VSP. سيؤدي ذلك إلى تمكين استخدام [موفر خدمة التصويت بدون حاسب](https://github.com/decredcommunity/issues/issues/100)، و التي ستبسط عملية الإعداد بشكل كبير للمستخدمين الجدد والسماح بجعل [البريد الإلكتروني اختياريًا](https://github.com/decred/dcrstakepool/issues/274) ([مناقشة](https://matrix.to/#/!wSdymYrEpBhsWlDJuk:decred.org/$15605505894685ViDcj:decred.org)).
 
 [dcrlnd](https://github.com/decred/dcrlnd): [نقلت](https://github.com/decred/dcrlnd/pull/36#issuecomment-509370199) التغييرات الأولية من [lnd](https://github.com/lightningnetwork/lnd)، وغالبًا ما تتزامن فروع التطوير الخاصة مع الفرع الرئيسي للجهة الرئيسية. كما قدم آخر [طلب سحب](https://github.com/lightningnetwork/lnd/commit/add905d17f7bbb11d0df2761cdf8accf2fef2b00)  تحضيري إلى lnd ليتم مراجعته  في 25 يوليوز.
 
@@ -49,7 +49,7 @@ _الصورة: مناقشة التحصيص في مؤتمر StakingCon 2019 في 
 
 حظيت واجهة برمجة تطبيقات Insight ببعض الاهتمام، مع إدخال تحسينات على [نقطة نهاية العنوان](https://github.com/decred/dcrdata/pull/1438) والعديد من إصلاحات الأخطاء و[زيادة](https://github.com/decred/dcrdata/pull/1481) الحد الأقصى لعدد اتصالات العميل من 1،000 إلى 16،384.
 
-> dcrdata هي واجهة برمجة تطبيقات Insight الرسمية لـديكريد. تستخدم حافظة Exodus الآن المضيف insight.dcrdata.decred.org لتلبية احتياجات واجهة برمجة تطبيقات Insight الخاصة بهم. هناك ما يقرب من 800 عميل ل socket.io (وحدات بت Insight websocket) متصلين ب dcrdata في أي وقت، ولم نتلق أي شكاوى من هؤلاء المستخدمين (chappjc@ في [الدردشة](https://matrix.to/#/!LmKzrmxJIXNHNiEmIh:decred.org/$15651246158457opycs:decred.org))
+> dcrdata هي واجهة برمجة تطبيقات Insight الرسمية لـديكريد. تستخدم محفظة Exodus الآن المضيف insight.dcrdata.decred.org لتلبية احتياجات واجهة برمجة تطبيقات Insight الخاصة بهم. هناك ما يقرب من 800 عميل ل socket.io (وحدات بت Insight websocket) متصلين ب dcrdata في أي وقت، ولم نتلق أي شكاوى من هؤلاء المستخدمين (chappjc@ في [الدردشة](https://matrix.to/#/!LmKzrmxJIXNHNiEmIh:decred.org/$15651246158457opycs:decred.org))
 
 تم [دمج](https://github.com/decred/dcrdata/pull/1491) التغييرات في dcrd. كما تم تحديث تبعيات npm لإغلاق الثغرات الأمنية المعروفة.
 
@@ -98,9 +98,9 @@ _الصورة: مناقشة التحصيص في مؤتمر StakingCon 2019 في 
 
 تم تقديم مقترحان جديدان في يوليوز:
 
-* [مقترح أبحاث المقاييس الأساسية لديكريد - المرحلة الأولى](https://proposals.decred.org/proposals/78b50f218106f5de40f9bd7f604b048da168f2afbec32c8662722b70d62e4d36) بواسطة Checkmate@، مساهم جديد، يطلب بمبلغ 12،000 دولار مقابل مدة 3 أشهر من العمل في مجال البحوث ووسائل التواصل الاجتماعي، بالإضافة إلى 2000 دولار للعمل المنجز قبل هذا (مقال [أقساط نقدية](https://medium.com/@_Checkmatey_/monetary-premiums-can-altcoins-compete-with-bitcoin-54c97a92c6d4)). انتهى التصويت وتمت الموافقة على الاقتراح بدعم 92٪.
+* [مقترح بحث المقاييس الأساسية لديكريد - المرحلة الأولى](https://proposals.decred.org/proposals/78b50f218106f5de40f9bd7f604b048da168f2afbec32c8662722b70d62e4d36) بواسطة Checkmate@، مساهم جديد، يطلب بمبلغ 12،000 دولار مقابل مدة 3 أشهر من العمل في مجال البحوث ووسائل التواصل الاجتماعي، بالإضافة إلى 2000 دولار للعمل المنجز قبل هذا (مقال [أقساط نقدية](https://medium.com/@_Checkmatey_/monetary-premiums-can-altcoins-compete-with-bitcoin-54c97a92c6d4)). انتهى التصويت وتمت الموافقة على الاقتراح بدعم 92٪.
 
-* [TinyDecred: أدوات البايتون لديكريد](https://proposals.decred.org/proposals/20e967dad9e7398901decf3cfe0acf4e0853f6558a62607265c63fe791b8b124) بواسطة buck54321@، متعاقد كان يعمل  يعمل على dcrdata العام الماضي، يطالب بمبلغ 8،000 دولار للعمل الذي تم إنجازه بالفعل على TinyDecred، وهي مجموعة من الأدوات للتفاعل مع بلوكشين ديكريد بالبايتون. تم فتح التصويت على الاقتراح في 6 غشت، وحصل على نسبة موافقة بلغت 89٪.
+* [TinyDecred: أدوات البايثون لديكريد](https://proposals.decred.org/proposals/20e967dad9e7398901decf3cfe0acf4e0853f6558a62607265c63fe791b8b124) بواسطة buck54321@، متعاقد كان يعمل  يعمل على dcrdata العام الماضي، يطالب بمبلغ 8،000 دولار للعمل الذي تم إنجازه بالفعل على TinyDecred، وهي مجموعة من الأدوات للتفاعل مع بلوكشين ديكريد بالبايتون. تم فتح التصويت على الاقتراح في 6 غشت، وحصل على نسبة موافقة بلغت 89٪.
 
 تم تقديم 5 مقترحات أخرى في غشت، 4 منها تتعلق بصانعي السوق وواحد يتعلق بتطوير التبادل اللامركزي DEX .سيغطي العدد القادم من بوليتيا دايجست هذه التفاصيل بعمق، وسيتم تغطيتها أيضًا في عدد غشت من المجلة.
 
@@ -128,7 +128,7 @@ _الصورة: مناقشة التحصيص في مؤتمر StakingCon 2019 في 
 
 التحصيص: بلغ متوسط سعر التذكرة لمدة 30 يومًا 125.8 DCR (بزيادة 5.8) حسب dcrstats.com. وقد تراوح السعر ما بين 118.8-129.5 DCR للتذكرة. كما بلغ المبلغ المقفل 4.83-5.06 مليون DCR، وهو ما يعادل 48.25-49.84% من الإجمالي المتاح.
 
-وصل سعر التذكرة إلى أعلى المستويات (129.46) منذ تغير صعوبة إجماع خوارزمية في يوليوز 2017. تم تقديم [حجة](https://matrix.to/#/!kdpEDksmOMNrlMqffD:decred.org/$156359151625133psHEo:decred.org) مفادها أنه لا ينبغي اعتبار هذه القيمة "رقما قياسيا"، لأن سعر التذكرة بلغ 238.9 DCR قبل تغيير الخوارزمية.
+وصل سعر التذكرة إلى أعلى المستويات (129.46) منذ تغير صعوبة  خوارزمية الإجماع في يوليوز 2017. تم تقديم [حجة](https://matrix.to/#/!kdpEDksmOMNrlMqffD:decred.org/$156359151625133psHEo:decred.org) مفادها أنه لا ينبغي اعتبار هذه القيمة "رقما قياسيا"، لأن سعر التذكرة بلغ 238.9 DCR قبل تغيير الخوارزمية.
 
 ويمكن الاطلاع على المخططات التاريخية [لبيانات مقدمي خدمات التصويت VSP](https://charts.dcr.farm/d/000000016/proof-of-stake-pools?orgId=1&from=1514764800000&to=now) على dcr.farm. وقد أتيحت مؤخرا بيانات مماثلة في [dcrextdata](http://dcrextdata.raedahgroup.com/)، في حين أن dcr.farm تتوفر على بيانات منذ يناير 2018. إن تحديد فاصل زمني طويل يكشف عن اتجاهات مثيرة للاهتمام في مسابقة موفر خدمة التصويت:
 
@@ -161,7 +161,7 @@ _الصورة: مناقشة التحصيص في مؤتمر StakingCon 2019 في 
 
 [أعلنت](https://twitter.com/jyashouafar/status/1152238301593657344) شركة بلوكهيد كابيتال عن استثمارها في ديكريد ونشرت [ورقة بحث](https://www.blockheadcap.com/post/decred-investment-thesis). استنتاجهم:
 
-> ديكريد عبارة عن عملة رقمية تكيفية مع سياسة نقدية صارمة. توفر السياسة النقدية الصارمة الأساس اللازم لتحقيق القسط النقدي في حين أن الطبيعة التكيفية لحكمها على السلسلة تتيح تكامل ميزات أكثر ديناميكية. كما تخلق آلية الإجماع الهجينة ضوابط وتوازنات كافية بين مختلف أطراف النظام الإيكولوجي مع القضاء في الوقت نفسه على التفرعات الصلبة المثيرة للجدل باعتبارها الوسيلة الأساسية لحل النزاعات - وهي ميزة مرغوبة للغاية لأصول احتياطي عالمية طموحة. وعلاوة على ذلك، فإن الإجماع الهجين يخلق مساحة فاصلة أكثر أمانًا، مما يجعل فضاء الكتلة أكثر قيمة، ويوفر عملة أكثر مقاومة للرقابة. تتكرر الديكريد على نقاط قوة البتكوين وتدعم العديد من أوجه القصور فيها، مما يجعلها في وضع يسمح لها باستكمالها أو التنافس معها كمخزن رقمي ذي قيمة.
+> ديكريد عبارة عن عملة رقمية تكيفية مع سياسة نقدية صارمة. توفر السياسة النقدية الصارمة الأساس اللازم لتحقيق العلاوة النقدية في حين أن الطبيعة التكيفية لحوكمتها على السلسلة تتيح إضافة ميزات أكثر ديناميكية. كما تخلق آلية الإجماع الهجينة ضوابط وتوازنات كافية بين مختلف أطراف النظام الإيكولوجي مع القضاء في الوقت نفسه على التفرعات الصلبة المثيرة للجدل باعتبارها الوسيلة الأساسية لحل النزاعات - وهي ميزة مرغوبة للغاية لأصل طموح بأن يكون احتياطي عالمي. وعلاوة على ذلك، فإن الإجماع الهجين يخلق مساحة فاصلة أكثر أمانًا، مما يجعل فضاء الكتلة أكثر قيمة، ويوفر عملة أكثر مقاومة للرقابة. تتكرر الديكريد على نقاط قوة البتكوين وتدعم العديد من أوجه القصور فيها، مما يجعلها في وضع يسمح لها باستكمالها أو التنافس معها كمخزن رقمي ذو قيمة.
 
 ## الإنتشار
 
@@ -221,7 +221,7 @@ _الصورة: مناقشة التحصيص في مؤتمر StakingCon 2019 في 
 مقالات مختارة:
 
 * الديكريد: ما أراد الذهب و البتكوين أن يكونا بواسطة باسكال ثيلمان ([seekingalpha.com](https://seekingalpha.com/instablog/49962360-pascal-thellmann/5324856-decred-gold-bitcoin-wanted))
-* أقساط نقدية، هل ستتمكن العملات البديلة من منافسة البتكوين بواسطة Checkmate@ (على [medium](https://medium.com/@_Checkmatey_/monetary-premiums-can-altcoins-compete-with-bitcoin-54c97a92c6d4))
+* علاوة نقدية، هل ستتمكن العملات البديلة من منافسة البتكوين بواسطة Checkmate@ (على [medium](https://medium.com/@_Checkmatey_/monetary-premiums-can-altcoins-compete-with-bitcoin-54c97a92c6d4))
 * ليبرا: صديقة أم عدوة؟ بواسطة jy-p@ (على [ccn.com](https://www.ccn.com/news/libra-friend-or-foe/2019/07/21/))
 * البتكوين والديكريد / الوثائق التاريخية للثورة المالية الرقمية كتبها BlackBearXVII (على [medium](https://medium.com/@imagnusholdings/bitcoin-decred-historical-documents-of-a-digital-financial-revolution-4debfa0d10d9))
 * الشبكات السيادية للعملات الرقمية بواسطة جويل مونيغرو (على [placeholder.vc](https://www.placeholder.vc/blog/2019/7/31/lvhpfydo4m3uoezhwhicyxo06og0mn)) - يذكر الديكريد كمثال
@@ -260,7 +260,7 @@ _الصورة: مناقشة التحصيص في مؤتمر StakingCon 2019 في 
 
 كان Checkmate@ نشطًا جدًا على التويتر وحقق مشاركة جيدة حول هاشتاغ DecredChallenge# و DontSleepOnDecred#، وهنا بعض النقاط البارزة:
 
-* [الإعلان](https://twitter.com/_Checkmatey_/status/1148682397875167233) عن مقال الأقساط المالية
+* [الإعلان](https://twitter.com/_Checkmatey_/status/1148682397875167233) عن مقال العلاوة المالية
 * [ليست بتفرع للبتكوين](https://twitter.com/_Checkmatey_/status/1155901635257929728)
 * [جلد في اللعبة](https://twitter.com/_Checkmatey_/status/1148354974390390784)
 * [التحوط](https://twitter.com/_Checkmatey_/status/1149560942654414848) للبتكوينرز و مواليي الإيثيريوم
@@ -314,7 +314,7 @@ _الصورة: مناقشة التحصيص في مؤتمر StakingCon 2019 في 
 
 وكما هو الحال مع أي اقتراح مثير للجدل لتحسين الإيثيريوم، فمن الصعب على الغرباء أن يعرفوا ما إذا كان EIP-2025 سيذهب إلى أي مكان. [تغريدة](https://twitter.com/VitalikButerin/status/1154733914881179648) من فيتاليك تقول أنه يبدو أن لديه القليل من الدعم ربما تشير إلى أنه لن يتم إدراجها في التفرع الصلب لاسطنبول.
 
-[مقال](https://research.circle.com/insights/degrees-of-architectural-decentralization-to-infura-and-beyond)  آخر لدائرة بحث نشر عن الإيثيريوم يتعلق بمركزية Infura، وهي شركة خدمات أنشأتها Consensys والتي تسمح لمطوري dapp بتجنب إنشاء وتشغيل العقد الخاصة بهم. تعتبر المقالة صعوبة وتزايد الطلب على تشغيل عقدة كاملة (زادت متطلبات المساحة من 25 إلى 48٪ منذ بداية العام) على أنها تسبب انخفاضًا في عدد العقد الكاملة من 12،000 في دجنبر 2018 إلى 8،000 في يوليوز 2019. إن Infura مرحب بها لأنها تسمح لمطوري الإيثيريوم بتجنب إزعاج التفاعل مع البلوكشين مباشرةً، ولكنها تقدم نقطة فشل مركزية لـ 50،000 dapps ومطورين يعتمدون عليها. تعتمد Infura بدورها على خدمات أمازون الإلكترونية لتشغيل العقد.
+[مقال](https://research.circle.com/insights/degrees-of-architectural-decentralization-to-infura-and-beyond)  آخر لدائرة بحث نشر عن الإيثيريوم يتعلق بمركزية Infura، وهي شركة خدمات أنشأتها Consensys والتي تسمح لمطوري dapp بتجنب إنشاء وتشغيل العقد الخاصة بهم. يعبر المقالةعن صعوبة وتزايد الطلب على تشغيل عقدة كاملة (زادت متطلبات المساحة من 25 إلى 48٪ منذ بداية العام) على أنها تسبب انخفاضًا في عدد العقد الكاملة من 12،000 في دجنبر 2018 إلى 8،000 في يوليوز 2019. إن Infura مرحب بها لأنها تسمح لمطوري الإيثيريوم بتجنب إزعاج التفاعل مع البلوكشين مباشرةً، ولكنها تقدم نقطة فشل مركزية لـ 50،000 dapps ومطورين يعتمدون عليها. تعتمد Infura بدورها على خدمات أمازون الإلكترونية لتشغيل العقد.
 
 تنتقل [تجربة الدونات](https://www.reddit.com/r/ethtrader/wiki/donuts) على /r/ethtrader إلى [مرحلة](https://www.reddit.com/r/ethtrader/comments/c3f1ku/the_next_phase_for_donuts/) أخرى، حيث يكسب المشاركون في subreddit نقاطًا بناء على الكارما الخاصة بهم على subreddit ويستخدمونها للمشاركة في استطلاعات الرأي. كما تم إعداد عقود ذكية تتيح نقل الدونات إلى سلسلة بلوكشين الإيثريوم، ويقوم بعض مدراء ريديت بتسهيل ذلك من جهة ريديت. وبما أن الدونات أصبحت "لا مركزية"، فإن استطلاعات الرأي ستصبح رسالة تصويت غير ملزمة، بسبب المخاوف في المجتمع بشأن الحوكمة على السلسلة. يبدو أن هذا اختيار مثير للجدل، استنادًا إلى التعليقات على الإعلان، كما أن هناك بعض الالتباس حول الغرض من الدونات.
 
