--- a/journal/201909.md
+++ b/journal/201909.md
@@ -6,17 +6,17 @@
 
 _الصورة: تغيّرات موسمية على السلسلة بواسطة saender@_
 
-* إنضمت برمجيات جديدة لمجمع تعدين إثبات العمل إلى عائلة مشروع ديكريد على dcrpool. تعد برامج التجمع المفتوحة المصدر ذي الجودة العالية نادرة، وتشكل الحاجة إلى مثل هذا البرنامج عائقًا أمام بدء تجمع تعدين جديد. يملأ dcrpool هذا الفراغ، مما يؤدي إلى تمهيد ساحة اللعب حتى يتمكن أي شخص من بدء تجمع تعدين خاص أو عام. ومن شأن ذلك أن يفيد لامركزية قوة تعدين إثبات العمل عن طريق تقليص وفورات الحجم التي تفضل تجمعات كبيرة.
-* تم إصدار النسخة 1.2.0 ل dcrstakepool. يعد هذا الإصدار تتويجا لأعمال التطوير التي بدأت في شتنبر 2017، وهو يوفر عددا من التحسينات، بما في ذلك واجهة ملائمة للمشرفين للتعامل مع التذاكر التي تم شراؤها برسوم غير كافية، وتصميم شامل للواجهة الأمامية، والتحسينات الأمنية، والمصطلحات المحدثة، والحد من الاعتماد على أطراف ثالثة، وإصلاح الأخطاء المختلفة.
+* انضمت الى عائلة مشاريع ديكريد شعبة جديدة من برنامج تَجَمّع تعدين اثبات العمل  dcrpool. تعد برامج التَجَمّع المفتوحة المصدر ذي الجودة العالية نادرة، وتشكل الحاجة إلى مثل هذا البرنامج عائقًا أمام بدء تَجَمّع تعدين جديد. يملأ dcrpool هذا الفراغ، مما يؤدي إلى تمهيد ساحة اللعب حتى يتمكن أي شخص من بدء تَجَمّع تعدين خاص أو عام. ومن شأن ذلك أن يفيد لامركزية قوة تعدين إثبات العمل عن طريق تقليص وفورات الحجم التي تفضل تجمعات كبيرة.
+* تم إصدار النسخة 1.2.0 ل dcrstakepool. يعد هذا الإصدار تتويجاً لأعمال التطوير التي بدأت في شتنبر 2017، وهو يوفر عدداً من التحسينات، بما في ذلك واجهة ملائمة للمشرفين للتعامل مع التذاكر التي تم شراؤها برسوم غير كافية، وتصميم شامل للواجهة الأمامية، والتحسينات الأمنية، والمصطلحات المحدثة، والحد من الاعتماد على أطراف ثالثة، وإصلاح الأخطاء المختلفة.
 * وقد كان شهر شتنبر شهرا كبيرا لعمليات الدمج، حيث أضيف دعم DCR إلى محفظة Trust Wallet، ومحفظة Exodus للهاتف المحمول، وامتداد Joule بالكروم للدفع باستخدام الشبكة البرقية، من بين خدمات أخرى.
 
 ## التطوير
 
-[dcrd](https://github.com/decred/dcrd): تم [تنفيذ](https://github.com/decred/dcrd/pull/1856) الإصدار 2 من المرشحات المدمجة. وتستخدم هذه المرشحات مساحة أقل من مرشحات الإصدار 1، مما سيشكل تحسنا بالنسبة للزبائن الخفيفة (التحقق البسيط من الدفع). كما ستستخدم مرشحات الإصدار 2 في [التزامات ترويسة الكتل](https://proposals.decred.org/proposals/0a1ff846ec271184ea4e3a921a3ccd8d478f69948b984445ee1852f272d54c58).
+[dcrd](https://github.com/decred/dcrd): تم [تنفيذ](https://github.com/decred/dcrd/pull/1856) الإصدار 2 من المُرَشّحات المدمجة. وتستخدم هذه المُرَشّحات مساحة أقل من مُرَشّحات الإصدار 1، مما سيشكل تحسناً بالنسبة للعملاء الخفيفون (التحقق البسيط من الدفع). كما ستستخدم مُرَشّحات الإصدار 2 في [التزامات رَأْسِيَّة الكتلة](https://proposals.decred.org/proposals/0a1ff846ec271184ea4e3a921a3ccd8d478f69948b984445ee1852f272d54c58).
 
 [تلقت](https://github.com/decred/dcrd/pull/1901) وحدة `الميمبول` رموز أخطاء دقيقة. تمت إزالة مجموعة من التعليمات البرمجية القديمة المتعلقة بالتعدين، بما في ذلك [إزالة](https://github.com/decred/dcrd/pull/1736) `getblocktemplate` لصالح `getwork`.
 
-كانت هناك تغييرات متعددة أصغر لإعادة تغيير تصميم البرامج، وتحسين تغطية الاختبار والوثائق، وإصلاح الأخطاء.
+كانت هناك تغييرات صغيرة متعددة لإعادة تغيير تصميم البرامج، وتحسين تغطية الاختبار والوثائق، وإصلاح الأخطاء.
 
 [dcrwallet](https://github.com/decred/dcrwallet): يستخدم كود Go الخاص بـ Dcrwallet الآن Decred.org بدلا من Github.com باسم الوحدة النمطية الخاصة بها. وتناقش [هنا](https://github.com/decred/dcrd/issues/1264) فكرة تبني هذا على نطاق أوسع للحد من الاعتماد على GitHub.
 
@@ -28,7 +28,7 @@ _الصورة: تغيّرات موسمية على السلسلة بواسطة sa
 
 تقترب عملية دمج الشبكة البرقية من [الاكتمال](https://github.com/decred/decrediton/pull/2107). يستمر العمل [لإعادة تصميم](https://github.com/decred/decrediton/pull/2182)  عملية بدء التشغيل إلى جهاز محدود من أجل جعله أكثر قوة.
 
-[بوليتيا](https://github.com/decred/politeia): إعادة تصميم بوليتيا مفعل على [شبكة الاختبار](https://test-proposals.decred.org/)، والاختبار/ردود الفعل موضع ترحيب.
+[بوليتيا](https://github.com/decred/politeia): إعادة تصميم بوليتيا مفعل على [الشبكة التجريبة](https://test-proposals.decred.org/)، والاختبار/ردود الفعل موضع ترحيب.
 
 يجري إحراز تقدم كبير في نظام إدارة المتعاقدين،  حيث يتم دمج [أساس](https://github.com/decred/politeia/pull/980) نظام اقتراح تخليص متعاقدي ديكريد و[وظائفه](https://github.com/decred/politeia/pull/981)، وقيام المتعاقدين بالعمل على التفاعل معه، إلى جانب مجموعة من التحسينات الأصغر حجما وإصلاح الأخطاء لكل من نظام إدارة المتعاقدين وموقع المقترحات. الأولويات القادمة على موقع الاقتراحات هي [مقترحات طلب الاقتراحات](https://github.com/decred/politeia/issues/966) ودمج [تريليان](https://github.com/google/trillian) مما سيسمح بالختم الزمني للقطع الفردية للمحتوى.
 
@@ -48,9 +48,9 @@ _الصورة: تغيّرات موسمية على السلسلة بواسطة sa
 
 تم إجراء العديد من التحسينات الأمنية لمنع هجمات التزييف عبر المواقع (CSRF)، وتسريب البيانات الخاصة إلى جهات خارجية، والروابط الخبيثة وتخزين المعلومات الحساسة بواسطة المتصفحات.
 
-الإصدار هو نتيجة لـ 160 طلب سحب من 20 مساهم تم تقديمها منذ شتنبر 2017. للحصول على تفاصيل كاملة عن الإصدار، راجع [ملاحظات الإصدار](https://github.com/decred/dcrstakepool/releases/tag/v1.2.0).
+هذا الإصدار هو نتيجة لـ 160 طلب سحب من 20 مساهم تم تقديمها منذ شتنبر 2017. للحصول على تفاصيل كاملة عن الإصدار، راجع [ملاحظات الإصدار](https://github.com/decred/dcrstakepool/releases/tag/v1.2.0).
 
-[dcrpool](https://github.com/decred/dcrpool): بعد أكثر من عام من الإعداد، تم [إصدار](https://twitter.com/decredproject/status/1176914732399439873) مجموعة التعدين مفتوحة المصدر لديكريد مع نشر [مدونة](https://blog.decred.org/2019/09/25/Introducing-Dcrpool/) حول هذا الموضوع. ميزات dcrpool:
+[dcrpool](https://github.com/decred/dcrpool): بعد أكثر من عام من الإعداد، تم [إصدار](https://twitter.com/decredproject/status/1176914732399439873) تَجَمّع التعدين مفتوحة المصدر لديكريد مع نشر [مدونة](https://blog.decred.org/2019/09/25/Introducing-Dcrpool/) حول هذا الموضوع. ميزات dcrpool:
 
 * يمكن أن تعمل كمجمع خاص أو عام
 * تدعم جميع المعدنين المعنيين
@@ -98,7 +98,7 @@ _الصورة: تغيّرات موسمية على السلسلة بواسطة sa
 إحصائيات المجتمع اعتبارًا من 2 أكتوبر:
 
 * مستخدمي بوليتيا: 181 (+7)
-* متابعو التويتر: 440,578 (-19)
+* متابعو التويتر: 40,578 (-19)
 * المشتركين في ريديت: 9,631 (+37)
 * مستخدمي الماتريكس: 436 (+24)
 * مستخدمي السلاك: 6,851 (+17)
@@ -252,7 +252,7 @@ _الصورة: تغيّرات موسمية على السلسلة بواسطة sa
 
 الصوتيات:
 
-* الحلقة 8 من ديكريد في العمق مع Checkmate@ - حيث يتحدث Checkmate عن مجموعة قيم DCR ونسبة المخزون إلى التدفق، ومقاييس البتكوين و ديكريد على السلسلة، والأقساط النقدية، والتمويل المستدام لجذب المساهمين الملتزمين، وخطط البحث الخاصة به. ([اليوتيوب](https://www.youtube.com/watch?v=2JbMWgJUoSQ) و [soundcloud](https://soundcloud.com/decredindepth/dcr-checkmate))
+* الحلقة 8 من ديكريد في العمق مع Checkmate@ - حيث يتحدث Checkmate عن مجموعة قيم DCR ونسبة المخزون إلى التدفق، ومقاييس البتكوين و ديكريد على السلسلة، والعلاوة النقدية، والتمويل المستدام لجذب المساهمين الملتزمين، وخطط البحث الخاصة به. ([اليوتيوب](https://www.youtube.com/watch?v=2JbMWgJUoSQ) و [soundcloud](https://soundcloud.com/decredindepth/dcr-checkmate))
 * الحلقة 76 من بودكاست POV Crypto - إنضم jy-p@ إلى طاقم POV Crypto في حلقة بعنوان "البحث عن السيادة" التي تأخذ بعين الاعتبار أساسيات البتكوين و ديكريد والسيادة والتوافق مع الإصدارات السابقة والخصوصية. ([اليوتيوب](https://www.youtube.com/watch?v=WnY3c-F5caw) و [libsyn](https://povcryptopod.libsyn.com/77-discovering-decred-w-jake-y-p))
 
 ## مناقشات المجتمع
@@ -261,7 +261,7 @@ _الصورة: تغيّرات موسمية على السلسلة بواسطة sa
 
 * تم [اختراق](https://twitter.com/cburniske/status/1177747319426621440) حساب التيليجرام الخاص بكريس بورنيسكي وطلب من الناس إرسال العملات الرقمية له. تأكد من [تعيين كلمة المرور](https://twitter.com/cburniske/status/1180527281350955008) في التيليجرام. وهذا أيضا تذكير جيد للتحقق من دفاعاتك ضد هجمات تبديل SIM.
 * إنتحال الشخصية على ديسكورد عن طريق ديسكورد نيترو أصبح أكثر شيوعا. يسمح النيترو بتغيير اسمك ـ وـ رمز الهوية.
-* [الإسقاط الجوي](https://archive.today/GXimX) لديكريد حيث تحصل على ETH مجاني ليس من الواضح صديقك.
+* [الإسقاط الجوي](https://archive.today/GXimX) لديكريد حيث تحصل على ETH مجاني الواضح انه ليس  صديقك.
 * بشكل عام، انتبه وأبلغ عن أي حسابات ومجموعات مشبوهة على جميع المنصات.
 
 منشورات مختارة من الريديت:
